refactor(node): node-server service 层规范化(阶段2)
- 全部 service 实现 @RequiredArgsConstructor → @Resource 字段注入
- 注入字段名统一全类型驼峰(resourceServerCredentialMapper / xrayClientMapper / remoteScriptRunner 等)
- 手写 stream → CollectionUtils, 空集合 → Map.of()/List.of(), 服务层判空 → CollUtil/ObjectUtil

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>