@@ -1,5 +1,6 @@
 package com.nook.biz.node.service.resource.impl;
 
+import cn.hutool.core.util.ObjectUtil;
 import com.nook.biz.node.controller.resource.vo.ResourceServerFrontlineUpdateReqVO;
 import com.nook.biz.node.dal.dataobject.node.XrayServerDO;
 import com.nook.biz.node.dal.dataobject.resource.ResourceServerCapacityDO;
@@ -15,14 +16,14 @@ import com.nook.biz.node.service.resource.ResourceServerFrontlineService;
 import com.nook.biz.node.validator.ResourceServerFrontlineValidator;
 import com.nook.common.utils.collection.CollectionUtils;
 import com.nook.common.utils.object.BeanUtils;
-import lombok.RequiredArgsConstructor;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 /**
  * 线路机扩展 Service 实现类
@@ -30,65 +31,67 @@ import java.util.Map;
  * @author nook
  */
 @Service
-@RequiredArgsConstructor
 public class ResourceServerFrontlineServiceImpl implements ResourceServerFrontlineService {
 
-    private final ResourceServerFrontlineMapper frontlineMapper;
-    private final ResourceServerFrontlineValidator frontlineValidator;
-    private final ResourceServerCredentialMapper credentialMapper;
-    private final ResourceServerRuntimeMapper runtimeMapper;
-    private final ResourceServerCapacityMapper capacityMapper;
-    private final XrayServerMapper xrayServerMapper;
+    @Resource
+    private ResourceServerFrontlineMapper resourceServerFrontlineMapper;
+    @Resource
+    private ResourceServerFrontlineValidator resourceServerFrontlineValidator;
+    @Resource
+    private ResourceServerCredentialMapper resourceServerCredentialMapper;
+    @Resource
+    private ResourceServerRuntimeMapper resourceServerRuntimeMapper;
+    @Resource
+    private ResourceServerCapacityMapper resourceServerCapacityMapper;
+    @Resource
+    private XrayServerMapper xrayServerMapper;
 
     @Override
     public ResourceServerFrontlineDO get(String serverId) {
-        return frontlineMapper.selectById(serverId);
+        return resourceServerFrontlineMapper.selectById(serverId);
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void create(String serverId, ResourceServerFrontlineUpdateReqVO reqVO) {
-        frontlineValidator.validateDomainUnique(null, reqVO == null ? null : reqVO.getDomain());
-        ResourceServerFrontlineDO entity = reqVO == null
+        resourceServerFrontlineValidator.validateDomainUnique(null,
+                ObjectUtil.isNull(reqVO) ? null : reqVO.getDomain());
+        ResourceServerFrontlineDO entity = ObjectUtil.isNull(reqVO)
                 ? new ResourceServerFrontlineDO()
                 : BeanUtils.toBean(reqVO, ResourceServerFrontlineDO.class);
         entity.setServerId(serverId);
         LocalDateTime now = LocalDateTime.now();
         entity.setCreatedAt(now);
         entity.setUpdatedAt(now);
-        frontlineMapper.insert(entity);
+        resourceServerFrontlineMapper.insert(entity);
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void update(String serverId, ResourceServerFrontlineUpdateReqVO reqVO) {
-        frontlineValidator.validateExists(serverId);
-        frontlineValidator.validateDomainUnique(serverId, reqVO.getDomain());
+        resourceServerFrontlineValidator.validateExists(serverId);
+        resourceServerFrontlineValidator.validateDomainUnique(serverId, reqVO.getDomain());
         ResourceServerFrontlineDO patch = BeanUtils.toBean(reqVO, ResourceServerFrontlineDO.class);
         patch.setServerId(serverId);
-        frontlineMapper.updateBySelective(patch);
+        resourceServerFrontlineMapper.updateBySelective(patch);
     }
 
     @Override
     public RuntimeBundle loadRuntimeBundleSingle(String serverId) {
-        return batchLoadRuntimeBundle(java.util.Set.of(serverId));
+        return batchLoadRuntimeBundle(Set.of(serverId));
     }
 
     @Override
     public RuntimeBundle batchLoadRuntimeBundle(Collection<String> serverIds) {
         if (CollectionUtils.isAnyEmpty(serverIds)) {
-            Map<String, ResourceServerCredentialDO> emptyCred = Collections.emptyMap();
-            Map<String, ResourceServerRuntimeDO> emptyRt = Collections.emptyMap();
-            Map<String, ResourceServerCapacityDO> emptyCap = Collections.emptyMap();
-            Map<String, XrayServerDO> emptyXray = Collections.emptyMap();
-            return new RuntimeBundle(emptyCred, emptyRt, emptyCap, emptyXray);
+            return new RuntimeBundle(Map.of(), Map.of(), Map.of(), Map.of());
         }
         Map<String, ResourceServerCredentialDO> creds = CollectionUtils.convertMap(
-                credentialMapper.selectBatchIds(serverIds), ResourceServerCredentialDO::getServerId);
+                resourceServerCredentialMapper.selectBatchIds(serverIds), ResourceServerCredentialDO::getServerId);
         Map<String, ResourceServerRuntimeDO> runtimes = CollectionUtils.convertMap(
-                runtimeMapper.selectBatchIds(serverIds), ResourceServerRuntimeDO::getServerId);
+                resourceServerRuntimeMapper.selectBatchIds(serverIds), ResourceServerRuntimeDO::getServerId);
         Map<String, ResourceServerCapacityDO> caps = CollectionUtils.convertMap(
-                capacityMapper.selectBatchIds(serverIds), ResourceServerCapacityDO::getServerId);
+                resourceServerCapacityMapper.selectBatchIds(serverIds), ResourceServerCapacityDO::getServerId);
         Map<String, XrayServerDO> xrays = CollectionUtils.convertMap(
                 xrayServerMapper.selectBatchIds(serverIds), XrayServerDO::getServerId);
         return new RuntimeBundle(creds, runtimes, caps, xrays);
